<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.NotesFragment"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_icon"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingHorizontal="@dimen/_17sdp"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notesFragment_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_17ssp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/radius_stroke_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:text="@string/notesText1"
            android:fontFamily="@font/poppins_medium"
            android:textIsSelectable="true"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/radius_stroke_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:text="@string/notesText2"
            android:fontFamily="@font/poppins_medium"
            android:textIsSelectable="true"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/radius_stroke_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:text="@string/notesText3"
            android:fontFamily="@font/poppins_medium"
            android:textIsSelectable="true"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/radius_stroke_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:text="@string/notesText4"
            android:fontFamily="@font/poppins_medium"
            android:textIsSelectable="true"
            />
    </LinearLayout>
    </LinearLayout>
</ScrollView>