<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.HomeFragment"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_20sdp"
        >
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainColor"
            >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="AT-TANZIL ACADEMY"
                    android:textColor="@color/white"
                    />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/note_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:icon="@drawable/notes"
        android:paddingBottom="@dimen/_10sdp"
        app:iconPadding="@dimen/_10sdp"
        android:lines="2"
        android:ellipsize="end"
        app:iconGravity="textTop"
        android:textSize="@dimen/_10ssp"
        android:fontFamily="@font/poppins_bold"
        app:cornerRadius="@dimen/_10sdp"
        android:stateListAnimator="@null"
        android:elevation="@dimen/_8sdp"
        android:textAllCaps="false"
        android:backgroundTint="@color/light_mainColor"
        android:text="@string/notesButton_text"

        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/keys_button"
        app:layout_constraintTop_toTopOf="@id/keys_button"
        app:layout_constraintBottom_toBottomOf="@id/keys_button"
        />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/keys_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/key"
            android:gravity="center"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            app:iconPadding="@dimen/_10sdp"
            android:fontFamily="@font/poppins_bold"
            app:iconGravity="textTop"
            android:textSize="@dimen/_10ssp"
            app:cornerRadius="@dimen/_10sdp"
            android:stateListAnimator="@null"
            android:elevation="@dimen/_8sdp"
            android:textAllCaps="false"
            android:backgroundTint="@color/light_mainColor"
            android:text="@string/keyButtonText"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@id/note_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/level1_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        app:icon="@drawable/quran__1_"
        android:paddingBottom="@dimen/_10sdp"
        app:iconPadding="@dimen/_12sdp"
        android:lines="2"
        android:ellipsize="end"
        app:iconGravity="textTop"
        android:textSize="@dimen/_11ssp"
        android:fontFamily="@font/poppins_bold"
        app:cornerRadius="@dimen/_10sdp"
        android:stateListAnimator="@null"
        android:elevation="@dimen/_8sdp"
        android:textAllCaps="false"
        android:backgroundTint="@color/light_mainColor"
        android:text="@string/level_1"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/level2_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/_100sdp"
        app:icon="@drawable/quran__1_"
        android:paddingBottom="@dimen/_10sdp"
        app:iconPadding="@dimen/_12sdp"
        android:lines="2"
        android:ellipsize="end"
        app:iconGravity="textTop"
        android:textSize="@dimen/_11ssp"
        android:fontFamily="@font/poppins_bold"
        app:cornerRadius="@dimen/_10sdp"
        android:stateListAnimator="@null"
        android:elevation="@dimen/_8sdp"
        android:textAllCaps="false"
        android:backgroundTint="@color/light_mainColor"
        android:text="@string/level_2"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/level1_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>