<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.VideoFragment"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        >

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_icon"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingHorizontal="@dimen/_17sdp"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            android:backgroundTint="@color/black"
            app:cardElevation="@dimen/_3sdp"
            >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    >
                     <FrameLayout
                         android:id="@+id/video_card"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:cardCornerRadius="@dimen/_10sdp"
                         >
                    <VideoView
                        android:id="@+id/video_player"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_200sdp"
                        android:layout_gravity="center"
                      />
                     </FrameLayout>

                    <ImageButton
                        android:id="@+id/play_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_play_circle_24"
                        android:background="@null"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:indeterminateTint="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:visibility="invisible"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/download_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/download"
        android:backgroundTint="#4DC85B"
        app:icon="@drawable/download"
        android:text="@string/down_button_text"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/poppins_bold"
        android:textAllCaps="false"
        android:stateListAnimator="@null"
        android:elevation="@dimen/_5sdp"
        app:cornerRadius="@dimen/_8sdp"
        android:layout_gravity="center_horizontal"
        />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/radius_black_stroke_background"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/arabic_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            android:textDirection="rtl"
            android:padding="@dimen/_10sdp"
            android:textIsSelectable="true"
            />
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/translation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_11ssp"
            android:fontFamily="@font/poppins_medium"
            android:textIsSelectable="true"
            />


    </LinearLayout>
        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/istiadah_note"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:visibility="gone"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/practice"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginBottom="@dimen/_5sdp"
            />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:paddingBottom="@dimen/_40sdp"
        android:gravity="center"
        >
        <ImageButton
            android:id="@+id/whatsup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/whatsapp"
            android:background="@drawable/radius_background_5"
            app:tint="@color/white"
            android:padding="@dimen/_10sdp"
            android:backgroundTint="#4DC85B"
            android:layout_marginEnd="@dimen/_10sdp"
            />

        <ImageButton
            android:id="@+id/messenger_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/messenger__1_"
            android:background="@drawable/radius_background_5"
            app:tint="@color/white"
            android:padding="@dimen/_10sdp"
            android:backgroundTint="#2196F3"
            android:layout_marginStart="@dimen/_10sdp"
            />

    </LinearLayout>
    </LinearLayout>
</ScrollView>